--- a/src/modelo/index.html
+++ b/src/modelo/index.html
@@ -78,9 +78,9 @@
         <hr class="hr-2">
 
         <div class="row justify-content-end">
-            <div class="col-8 col-md-7 col-sm-6 ps-5"> CLIENTE: <b># 6546543</b></div>
+            <div class="col-8 col-md-7 col-sm-6 ps-5"> CLIENTE: <b>Eduardo Hernández</b></div>
             <div class="col-4 col-md-5 col-sm-6 text-end pe-5">
-                <span class="mx-3"><b>FECHA</b></span> 01 / JUNIO / 2022
+                <span class="mx-3"><b>FECHA</b></span> Thu Jun 02 11:58:21 MDT 2022
             </div>
         </div>
 
@@ -92,29 +92,18 @@
                     <thead>
                         <tr>
                             <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col">Tipo Proveedor</th>
+                            <th scope="col">Proveedor</th>
+                            <th scope="col">Importe</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
-                        </tr>
+<tr>
+<th scope="row">1</th>
+<td>Banquete</td>
+<td>Meser</td>
+ <td>300</td>
+</tr>
                     </tbody>
                 </table>
             </div>
@@ -128,13 +117,13 @@
                 <div class="">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-6 text-end"><b>SUBTOTAL: </b></div>
-                            <div class="col-6 text-start">$1393.00</div>
-                            <div class="col-6 text-end"><b>IVA:</b></div>
+                            <div class="col-6 text-start"><b>SUBTOTAL: </b></div>
+                            <div class="col-6 text-start">$300</div>
+                            <div class="col-6 text-start"><b>IVA:</b></div>
                             <div class="col-6 text-start">16 %</div>
                             <hr class="hr-3 w-75 my-4 mx-auto">
-                            <div class="col-6 text-end"><b>TOTAL: </b></div>
-                            <div class="col-6 text-start">$1615.00</div>
+                            <div class="col-6 text-start"><b>TOTAL: </b></div>
+                            <div class="col-6 text-start">$348</div>
 
                         </div>
                     </div>
