--- a/src/modelo/index.html
+++ b/src/modelo/index.html
@@ -78,9 +78,9 @@
         <hr class="hr-2">
 
         <div class="row justify-content-end">
-            <div class="col-8 col-md-7 col-sm-6 ps-5"> CLIENTE: <b>Eduardo Hernández</b></div>
+            <div class="col-8 col-md-7 col-sm-6 ps-5"> CLIENTE: <b>Enrique Lopez Balmaceda</b></div>
             <div class="col-4 col-md-5 col-sm-6 text-end pe-5">
-                <span class="mx-3"><b>FECHA</b></span> Thu Jun 02 11:58:21 MDT 2022
+                <span class="mx-3"><b>FECHA</b></span> Thu Jun 09 03:31:18 MDT 2022
             </div>
         </div>
 
@@ -101,8 +101,26 @@
 <tr>
 <th scope="row">1</th>
 <td>Banquete</td>
-<td>Meser</td>
- <td>300</td>
+<td>Los buenos</td>
+ <td>5000</td>
+</tr>
+<tr>
+<th scope="row">2</th>
+<td>Meseros</td>
+<td>Meseritos</td>
+ <td>6000</td>
+</tr>
+<tr>
+<th scope="row">3</th>
+<td>Musica</td>
+<td>DJ Mario</td>
+ <td>2000</td>
+</tr>
+<tr>
+<th scope="row">4</th>
+<td>Pastel</td>
+<td>Pastel Carmina</td>
+ <td>2000</td>
 </tr>
                     </tbody>
                 </table>
@@ -118,12 +136,12 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-6 text-start"><b>SUBTOTAL: </b></div>
-                            <div class="col-6 text-start">$300</div>
+                            <div class="col-6 text-start">$15000</div>
                             <div class="col-6 text-start"><b>IVA:</b></div>
                             <div class="col-6 text-start">16 %</div>
                             <hr class="hr-3 w-75 my-4 mx-auto">
                             <div class="col-6 text-start"><b>TOTAL: </b></div>
-                            <div class="col-6 text-start">$348</div>
+                            <div class="col-6 text-start">$17400</div>
 
                         </div>
                     </div>
